samples/_failures_safe/1761171106_793962_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_98f92322.c:134:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  134 | int matrix_trans
      | ^~~
